# ai-control-plane-gateway

./: .env.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: config.production.yaml  config.yaml
nginx/: nginx.conf
src/: __init__.py  abtesting.py  budget.py  cache.py  compression.py  config.py  main.py  observability.py  plugin.py  proxy.py  router.py  types.py  util.py
src/governance/: __init__.py  audit.py  guardrails.py  pii.py  policy.py
src/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
src/providers/: __init__.py  ai21.py  anthropic.py  azure.py  base.py  bedrock.py  cohere.py  deepseek.py  fireworks.py  google.py  groq.py  huggingface.py  mistral.py  ollama.py  openai.py  openai_compat.py  perplexity.py  replicate.py  together.py  xai.py
